--- a/table.html
+++ b/table.html
@@ -39,6 +39,13 @@
         <td>01777 </td>
         <td>01777 </td>
      </tr>
+     <tr class="IB">
+        <td>Rushdan</td>
+        <td>22303021</td>
+        <td>BCSE</td>
+        <td>01777 </td>
+        <td>01777 </td>
+     </tr>
     </tbody>
 </table>
 </body>
